功能： 增强主窗口中的图片文件管理 使用QFileDialog实现了多文件选择功能 新增在QListWidget中显示所选图片的功能，并支持顺序反转选项 添加了图片列表中上下移动及删除选定图片的方法 更新用户界面，新增移动和删除图片的按钮 在tools.h和tools.cpp中添加了用于文件名提取和QString转换的工具函数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ set(TS_FILES ImageSplicing_zh_CN.ts)
 if(ANDROID)
   add_library(ImageSplicing SHARED
     main.cpp
+    tools.cpp
+    tools.h
     mainwindow.cpp
     mainwindow.h
     mainwindow.ui
@@ -39,6 +41,8 @@ if(ANDROID)
 else()
   add_executable(ImageSplicing
     main.cpp
+    tools.cpp
+    tools.h
     mainwindow.cpp
     mainwindow.h
     mainwindow.ui
