实现基础功能；

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.10)  # Updated version to avoid deprecation warning
+cmake_minimum_required(VERSION 3.10)
 
 project(ImageSplicing LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -11,19 +10,20 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt5 COMPONENTS Widgets LinguistTools REQUIRED)
-
-#set(TS_FILES ImageSplicing_zh_CN.ts)
-
-# Add OpenCV find package before creating the target
-list(APPEND CMAKE_PREFIX_PATH "D:\\libs\\opencv\\build\\x64\\vc16\\lib")
+# 设置 OpenCV 路径
 find_package(OpenCV REQUIRED)
 
-include_directories(nlohmann)
+find_package(Qt5 COMPONENTS Widgets LinguistTools REQUIRED)
+
+# 打印 OpenCV 信息用于调试
+message(STATUS "OpenCV library status:")
+message(STATUS "    version: ${OpenCV_VERSION}")
+message(STATUS "    libraries: ${OpenCV_LIBS}")
+message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
+
 add_executable(ImageSplicing
     main.cpp
-    tools.cpp
-    tools.h
+    tools.hpp
     mainwindow.cpp
     mainwindow.h
     mainwindow.ui
@@ -32,18 +32,17 @@ add_executable(ImageSplicing
     settingwindow.ui
     setting.h
     setting.cpp
+    imagepro.hpp
     enumerate.h
     enumerate.cpp
     ${TS_FILES}
-    )
+)
 
-# Link all libraries in one command to avoid mixing styles
 target_link_libraries(ImageSplicing PRIVATE
     Qt5::Widgets
     ${OpenCV_LIBS}
-    )
+)
 
-# Include OpenCV directories
 target_include_directories(ImageSplicing PRIVATE ${OpenCV_INCLUDE_DIRS})
 
 qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
