添加水平和垂直可移动图像项，删除不再使用的图像编辑窗口及相关文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,10 @@ add_executable(ImageSplicing
     imagepro.hpp
     enumerate.h
     enumerate.cpp
+    VerticalMovablePixmapItem.h
+    VerticalMovablePixmapItem.cpp
+    HorizontalMovablePixmapItem.h
+    HorizontalMovablePixmapItem.cpp
     ${TS_FILES}
 )
 
