feat: 添加复制和添加图片功能，优化UI布局

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,10 @@ add_executable(ImageSplicing
     VerticalMovablePixmapItem.cpp
     HorizontalMovablePixmapItem.h
     HorizontalMovablePixmapItem.cpp
+    editpage.h
+    editpage.cpp
+    editpage.ui
+    VerticalMovabliPixmapItemManager.hpp
     ${TS_FILES}
 )
 
