feat:添加拼接线;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ add_executable(ImageSplicing
     VerticalMovablePixmapItem.cpp
     HorizontalMovablePixmapItem.h
     HorizontalMovablePixmapItem.cpp
+    SplicingLine.h
+    SplicingLine.cpp
     editpage.h
     editpage.cpp
     editpage.ui
