feat: 添加版本管理功能; fix:修复 graphicsView_result 只能拖拽一次文件的 bug;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,10 +46,39 @@ add_executable(ImageSplicing
     ${TS_FILES}
 )
 
+# --- Generate version resource from template ---
+set(MAJOR 1)
+set(MINOR 0)
+set(PATCH 1)
+
+configure_file(${CMAKE_SOURCE_DIR}/version.rc.in ${CMAKE_BINARY_DIR}/version.rc @ONLY)
+
+target_sources(ImageSplicing PRIVATE ${CMAKE_BINARY_DIR}/version.rc)
+
+# Set target version properties so the executable has version info
+set_target_properties(ImageSplicing PROPERTIES
+    VERSION "${MAJOR}.${MINOR}.${PATCH}"
+    SOVERSION "${MAJOR}"
+)
+
+# 设置输出目录
+set_target_properties(ImageSplicing PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin
+)
+
 target_link_libraries(ImageSplicing PRIVATE
     Qt5::Widgets
     ${OpenCV_LIBS}
 )
 target_include_directories(ImageSplicing PRIVATE ${OpenCV_INCLUDE_DIRS})
+
+# 复制可执行文件到bin目录（确保在不同构建配置下都能工作）
+add_custom_command(TARGET ImageSplicing POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_SOURCE_DIR}/bin
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:ImageSplicing> ${CMAKE_SOURCE_DIR}/bin/
+    COMMENT "Copying executable to bin directory"
+)
 
 qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
